<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ContestResultActivity">
    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:id="@+id/linear_layout1"
        android:background="@drawable/top_corner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_96sdp">
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:weightSum="3">
            <ImageView
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/imageViewResult"
                android:background="@drawable/ic_reply"
                android:padding="@dimen/_15sdp"
                android:clickable="true"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true" />
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/imageView">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/name_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CONTEST" />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/xl_pizza_plus" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/back_round_corner"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_below="@+id/linear_layout1"
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="wrap_content"
            android:src="@drawable/winner_contest"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/segoe_ui"
            android:text="Congratulation!!!"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/segoe_ui_italic"
            android:text="SHOAIB_OPU"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/seguisb"
            android:text="on winning the"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/xl_pizza_plus"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/seguisb"
            android:text="CONTEST"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <com.codesgood.views.JustifiedTextView
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About Contest Prize" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1"/>
                <com.codesgood.views.JustifiedTextView
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collect_prizes" />
                <com.codesgood.views.JustifiedTextView
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/seguisb"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text1" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>