<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/_80sdp"
            android:layout_margin="5dp"
            android:elevation="10dp">

            <ImageView
               android:scaleType="fitXY"
                android:id="@+id/roundedImageView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/heart_pizza"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xl_pizza" />
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="34dp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textColor="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$55" />
                    <TextView
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30/50" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="12dp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time Remaining" />
                    <TextView
                        android:textSize="25dp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="02:15:34" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pizza_hut" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">
                <TextView
                    android:textSize="25dp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pizza Hut" />
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loving_it" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <com.codesgood.views.JustifiedTextView
                android:textSize="12sp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tv_justified_paragraph"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="16dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About This Giveway" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="12sp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Better to know" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="12sp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:fontFamily="@font/seguisb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1" />
            <com.codesgood.views.JustifiedTextView
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Location" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/our_location"
                android:scaleType="fitXY" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>